# worldcup-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/agent_tools/: knowledge.py  mcp.py  skill.py
backend/app/: __init__.py  agent.py  football.py  main.py
backend/app/rag/: __init__.py  embeddings.py  ingest.py  service.py  sources.py  store.py
backend/data/corpus/: 2026-fifa-world-cup-qualification.txt  2026-fifa-world-cup.txt  brazil-national-football-team.txt  england-national-football-team.txt  fifa-world-cup.txt  france-national-football-team.txt  list-of-fifa-world-cup-hosts.txt  list-of-fifa-world-cup-stadiums.txt  metlife-stadium.txt  united-states-men-s-national-soccer-team.txt
backend/mcp_server/: football_tools.py
backend/rag/: embeddings.py  ingest.py  service.py  store.py
backend/scripts/: build_corpus.py
backend/services/: football.py  prediction.py
backend/skills/goldengoal-architecture/reference/: agent.md  architecture.md  data-pipeline.md  mcp-tools.md  rag-pipeline.md
backend/tests/: test_agent.py  test_main.py  test_prediction.py  test_rag.py
data/corpus/: 2018-fifa-world-cup.txt  2022-fifa-world-cup.txt  2026-fifa-world-cup.txt  README.md  argentina-national-football-team.txt  brazil-national-football-team.txt  england-national-football-team.txt  france-national-football-team.txt  germany-national-football-team.txt  list-of-fifa-world-cup-stadiums.txt
frontend/: index.html  package-lock.json  package.json  plan.md  tsconfig.json  wrangler.jsonc
frontend/src/: App.vue  style.css
frontend/src/api/: agent.ts  football.ts  footballMock.ts  mock.test.ts  mock.ts  predict.ts  types.ts
frontend/src/components/: ChatPanel.vue  IntroSplash.vue  MessageBubble.vue  PredictView.vue  ScheduleView.vue  StandingsView.vue
mcp_server/: README.md  football_tools.py
skills/goldengoal-architecture/: SKILL.md
skills/goldengoal-architecture/reference/: agent.md  architecture.md  data-pipeline.md  mcp-tools.md  rag-pipeline.md
