[project]
name = "goldengoal-backend"
version = "0.1.0"
description = "GoldenGoal World Cup 2026 RAG agent backend (FastAPI + LangChain + Chroma)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-dotenv",
    # RAG
    "langchain",
    "langchain-community",
    "langchain-google-genai",
    "langchain-huggingface",
    "langchain-chroma",
    "sentence-transformers",
    "chromadb",
    "wikipedia",
    # MCP + agent
    "mcp[cli]",
    "langchain-mcp-adapters",
    # Hardening
    "slowapi",
    # Pinned explicitly so we can force the CPU-only wheel (see tool.uv.sources).
    "torch",
]

[tool.uv]
# Application project (not a distributable library) — do not try to build app/scripts.
package = false

# Pull torch from the CPU-only index so Linux builds don't drag in the multi-GB
# CUDA/NVIDIA packages (the Spaces backend runs on CPU).
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
